syntax = "proto3";

package io.harness.pms.steps.io;

option java_multiple_files = true;

message StepOutcomeProto {
  string group = 1;
  string name = 2;
  string outcome = 3;
}
